--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "preinstall": "npm install",
-    "postinstall": "cp node_modules/save-svg-as-png/lib/* node_modules/save-svg-as-png/",
-    "build": "ng build --prod --build-optimizer --sourcemaps && mkdir app && mv dist app/",
+    "build": "./configure.sh",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
