--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "protractor": "~5.1.2",
     "source-map-explorer": "^1.5.0",
     "ts-node": "^3.3.0",
-    "tslint": "^5.5.0",
-    "typescript": "^2.3.4"
+    "tslint": "^5.5.0"
   }
 }
