--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "rxjs": "^5.1.0",
     "save-svg-as-png": "^1.4.5",
     "tinymce": "^4.6.7",
-    "zone.js": "^0.8.16",
-    "typescript": "^2.3.4"
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
     "@angular/cli": "^1.4.9",
