--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ng": "ng",
     "start": "node server.js",
     "postinstall": "./configure.sh",
+    "build": "ng build --prod --build-optimizer --sourcemaps",
+    "postbuild": "mv dist app/"
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
